<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="4" />

        <TextView
            android:id="@+id/participantNumber"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/empty" />

        <TextView
            android:id="@+id/field1"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/one" />

        <TextView
            android:id="@+id/field2"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/two" />

        <TextView
            android:id="@+id/field3"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/three" />

        <TextView
            android:id="@+id/field4"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/four" />

        <TextView
            android:id="@+id/field5"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/five" />

        <TextView
            android:id="@+id/field6"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/six" />

        <TextView
            android:id="@+id/field7"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/seven" />

        <TextView
            android:id="@+id/score"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:text="@string/pointsSum" />

        <TextView
            android:id="@+id/position"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:text="@string/position" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:listitem="@layout/table_row" />
</androidx.constraintlayout.widget.ConstraintLayout>